# novnc-TypeRelay

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/typerelay/: __main__.py  app.py  hotkeys.py  i18n.py  theme.py  typing_engine.py
tests/: test_app.py  test_hotkeys.py  test_i18n.py  test_typing_engine.py
